# ouroborus

./: .env.example  CONTRIBUTING.md  NOTICES.txt  README.md  SERVER_SETUP.md  pyproject.toml
data/queries/cpp/issues/: qlpack.yml
data/queries/solidity/tools/: FunctionTree.ql  ModifierTree.sql
data/templates/solidity/: arbitrary-send-eth.template  controlled-delegatecall.template  general.template  reentrancy-eth.template  template.template  tx-origin.template  unchecked-transfer.template  unprotected-upgrade.template
examples/: example.py  ui_example.py
src/: __init__.py  ouroborus.py  ouroborus_setup.py  ouroborus_solidity.py  pipeline.py
src/codeql/: db_lookup.py
src/llm/: llm_analyzer.py
src/slither/: __init__.py  run_slither.py  slither_parser.py
src/ui/: issue_parser.py  models.py  results_loader.py  ui_app.py
src/ui/components/: __init__.py  controls_bar.py  details_panel.py  issues_list_panel.py  splitter_divider.py
src/utils/: __init__.py  common_functions.py  config_validator.py  llm_config.py  logger.py
src/utils/exceptions/: __init__.py  base.py  codeql.py  llm.py
tests/: test_smoke.py
